- Added RatePlan entity with unique constraints and necessary fields.